amq-broker/overlays/broker-1/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: amq-broker
spec:
  serviceName: "amq-broker-1"
  selector:
    matchLabels:
      app: amq-broker-1
  template:
    spec:
      containers:
        - name: activemq-artemis
      volumes:
        - name: broker-storage
          persistentVolumeClaim:
            claimName: amq-broker-1
        - name: broker-config
          configMap:
            name: amq-broker-1
