amq-broker/overlays/broker-1/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-broker
spec:
  selector:
    app: amq-broker-1
  ports:
    - name: core-messaging-1
      port: 61616
      targetPort: 61616
    - name: web-console-1
      port: 8161
      targetPort: 8161
    - name: amqp-1
      port: 5672
      targetPort: 5672
    - name: mqtt-1
      port: 1883
      targetPort: 1883
    - name: stomp-1
      port: 61613
      targetPort: 61613
