amq-broker/overlays/broker-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amq-broker
spec:
  ports:
    - port: 61616
      targetPort: 12616
  selector:
    app: amq-broker-1
