amq-broker/overlays/broker-1/route-patch.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: amq-broker
spec:
  host: amq-broker-1-amq.apps.cluster-n2dhk.dynamic.redhatworkshops.io
  to:
    kind: Service
    name: amq-broker-1
    weight: 100
  port:
    targetPort: 8161
